--- a/public/css/dafater-report-public.css
+++ b/public/css/dafater-report-public.css
@@ -6,3 +6,16 @@
 .collapsed {
   visibility: collapse;
 }
+
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
